# junos-mcp-server

./: CLAUDE.md  README.md  pyproject.toml
docs/superpowers/plans/: 2026-06-29-junos-mcp-server.md
docs/superpowers/specs/: 2026-06-29-junos-mcp-server-design.md
src/junos_mcp_server/: server.py
tests/: test_server.py
